# Malta

./: Cargo.toml  README.md  Test Company  build.rs  history.txt
malta-core/: Cargo.toml  styles.css
malta-core/js/: employee.js  employees.js  main.js  project.js  projects.js  tools.js
malta-core/queries/: create_expense.surql  create_income.surql  get_all_projects.surql  get_expense.surql  get_general_expenses.surql  get_general_incomes.surql  get_income.surql  get_project.surql  get_project_expenses.surql  get_project_incomes.surql  get_total_expense.surql  get_total_income.surql  query_salary.surql  setup_database.surql
malta-core/src/: lib.rs  main.rs  models.rs
malta-core/teapot/: index.html
malta-core/templates/: employees.html  main.html  project.html  projects.html  tool.html  tools.html
malta-web/: Cargo.toml
malta-web/js/: employees.js  main.js  project.js  projects.js  tool.js
malta-web/src/: main.rs
malta-web/templates/: employee.html  main.html
migrations/1create_companies/: up.sql
migrations/2create_projects/: up.sql
migrations/3create_employees/: down.sql  up.sql
migrations/4create_tools/: down.sql  up.sql
migrations/5create_expenses/: up.sql
queries/: setup_database.surql
src/: app.rs  db.rs  graphics.rs  lib.rs  main.rs  message.rs  msg.rs  schema.rs  types.rs  views.rs  widget.rs  window.rs  winwrap.rs  wnd.rs  wndclass.rs  wndproc.rs
src/db/: models.rs  queries.rs  schema.rs
src/graphics/: colors.rs
src/message/: messagebox_results.rs  messagebox_styles.rs  window_procedure.rs
src/message/window_procedure/: window_messages.rs
src/msg/: messagebox_styles.rs
src/window/: cursor.rs  menu.rs  set_window_position_flags.rs  window_class.rs  window_extended_styles.rs  window_styles.rs
src/window/cursor/: cursor_names.rs
src/window/menu/: menu_item_flags.rs
src/winwrap/: core.rs  win32.rs
src/winwrap/win32/: foundation.rs  graphics.rs  system.rs  ui.rs
src/winwrap/win32/graphics/: gdi.rs
src/winwrap/win32/system/: console.rs  diagnostics.rs  environment.rs  library_loader.rs  threading.rs
src/winwrap/win32/system/diagnostics/: debug.rs
src/winwrap/win32/ui/: shell.rs  windows_and_messaging.rs
src/wnd/: window_styles.rs
templates/: base.html  project.html  projects.html
ui/: main.slint
