[package]
name = "malta"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
surrealdb = "1.5.4"
surrealdb-migrations = "1.5.0"
time = "0.3.36"
tokio = { version = "1.38.0", features = ["macros", "rt"] }
xilem = { git = "https://github.com/linebender/xilem/", version = "0.1.0" }
