[package]
name = "malta"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = "1.20.2"
rust_decimal = "1.36.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
surrealdb = { version = "1.5.5", features = ["kv-speedb", "sql2"] }
time = "0.3.36"
tokio = { version = "1.38.0", features = ["full"] }
xilem = { git = "https://github.com/linebender/xilem/", version = "0.1.0" }
