[package]
name = "malta"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.14.0"
axum = "0.8.4"
malta-core = { path = "malta-core" }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["rt-multi-thread"] }
tower-http = { version = "0.6.6", features = ["trace"] }
tracing-subscriber = "0.3.19"

[workspace]
members = [ "malta-core" ]
