[package]
name = "malta-core"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
once_cell = "1.20.2"
rust_decimal = { version = "1.36.0", features = ["serde-float"] }
rust_decimal_macros = "1.36.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
surrealdb = { version = "1.5.5", features = ["kv-speedb", "sql2"] }
tokio = { version = "1.38.0", features = ["full"] }