[package]
name = "malta-core"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38" }
# futures = "0.3.31"
once_cell = "1.20.2"
rust_decimal = { version = "1.36.0", features = ["serde-float"] }
rust_decimal_macros = "1.36.0"
serde = { version = "1.0.203", features = ["derive"] }
# serde_json = "1.0.120"
surrealdb = { version = "2.2.1", features = ["kv-rocksdb"] }
# tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros", "net", "sync"] }
tracing = "0.1.41"

[dev-dependencies]
surrealdb = { version = "2.2.1", features = ["kv-mem"] }
