[package]
name = "malta-core"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38" }
once_cell = "1.20.2"
rust_decimal = { version = "1.36.0", features = ["serde-float"] }
rust_decimal_macros = "1.36.0"
serde = { version = "1.0.203", features = ["derive"] }
surrealdb = { version = "2.2.1", features = ["kv-rocksdb"] }
tracing = "0.1.41"

[dev-dependencies]
surrealdb = { version = "2.2.1", features = ["kv-mem"] }
