[package]
name = "malta-web"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
chrono = "0.4.41"
malta-core = { path = "../malta-core" }
memory-serve = { version = "1.2.1", features = ["force-embed"] }
rust_decimal = "1.37.1"
rust_decimal_macros = "1.37.1"
serde = "1.0.219"
surrealdb = "2.3.2"
tokio = "1.45.0"
tower-http = { version = "0.6.4", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
